# docs/swagger.yaml
@@ -10,26 +10,13 @@ definitions:
       id:
         type: string
       status:
-        $ref: '#/definitions/value_objects.PostStatus'
+        $ref: '#/definitions/domain.PostStatus'
       title:
         type: string
       updatedAt:
         type: string
     type: object
-  request_dtos.CreatePostRequestDto:
-    description: CreatePostRequestDto is a data transfer object for creating a post
-    properties:
-      content:
-        description: '@Description Content is the content of the post'
-        type: string
-      description:
-        description: '@Description Description is the description of the post'
-        type: string
-      title:
-        description: '@Description Title is the title of the post'
-        type: string
-    type: object
-  value_objects.PostStatus:
+  domain.PostStatus:
     enum:
     - 0
     - 1
@@ -39,6 +26,35 @@ definitions:
     - PostStatusDraft
     - PostStatusPublished
     - PostStatusArchived
+  errors.AppError:
+    properties:
+      cause:
+        type: string
+      message:
+        type: string
+      type:
+        type: string
+    type: object
+  request_dtos.CreatePostRequestDto:
+    description: CreatePostRequestDto is a data transfer object for creating a post
+    properties:
+      content:
+        description: '@Description Content is the content of the post'
+        minLength: 10
+        type: string
+      description:
+        description: '@Description Description is the description of the post'
+        minLength: 10
+        type: string
+      title:
+        description: '@Description Title is the title of the post'
+        minLength: 10
+        type: string
+    required:
+    - content
+    - description
+    - title
+    type: object
 info:
   contact: {}
 paths:
@@ -61,6 +77,10 @@ paths:
           description: Post created successfully
           schema:
             $ref: '#/definitions/domain.Post'
+        "400":
+          description: Invalid request body
+          schema:
+            $ref: '#/definitions/errors.AppError'
       summary: post store
       tags:
       - posts
@@ -82,6 +102,10 @@ paths:
           description: Post retrieved successfully
           schema:
             $ref: '#/definitions/domain.Post'
+        "404":
+          description: Page not found
+          schema:
+            $ref: '#/definitions/errors.AppError'
       summary: Get post by id
       tags:
       - posts
